[package]
description = "The Tomato Timer CLI is a command-line tool designed to help you manage your time effectively using the Pomodoro Technique. With this tool, you can break your work into focused intervals called \"pomodoros\" and take short breaks in between. This technique helps improve productivity and maintain focus throughout your work sessions."
name = "tomato-timer-cli"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = [
    "cli",
    "productivity",
    "pomodoro-technique",
    "time-management",
    "tomato-timer",
]
repository = "https://github.com/miguoliang/tomato-timer-cli"
homepage = "https://miguoliang.github.io/tomato-timer-cli/"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
rodio = "0.18.1"
termion = "4.0.0"
